Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54312

QtWebEngine build fails in dev

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.8.0 Alpha
    • 5.8.0 Alpha
    • WebEngine
    • None
    • RHEL 7.2 and OpenSUSE 42.1

      WebEngine fails to build at least in RHEL 7.2 and OpenSUSE 42.1 in dev branch with:

      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp: In member function ‘void QtWebEngineCore::DelegatedFrameNode::commit(QtWebEngineCore::ChromiumCompositorData*, cc::ReturnedResourceArray*, QtWebEngineCore::RenderWidgetHostViewQtDelegate*)’:
      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:543:26: error: invalid use of incomplete type ‘class QSGImageNode’
                       imageNode->setTargetRect(toQt(quad->rect));
                                ^
      In file included from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.h:55:0,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:49:
      /home/qt/work/qt/qtwebengine/src/core/render_widget_host_view_qt_delegate.h:52:7: note: forward declaration of ‘class QSGImageNode’
       class QSGImageNode;
             ^
      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:544:26: error: invalid use of incomplete type ‘class QSGImageNode’
                       imageNode->setInnerTargetRect(toQt(quad->rect));
                                ^
      In file included from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.h:55:0,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:49:
      /home/qt/work/qt/qtwebengine/src/core/render_widget_host_view_qt_delegate.h:52:7: note: forward declaration of ‘class QSGImageNode’
       class QSGImageNode;
             ^
      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:545:26: error: invalid use of incomplete type ‘class QSGImageNode’
                       imageNode->setTexture(layer);
                                ^
      In file included from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.h:55:0,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:49:
      /home/qt/work/qt/qtwebengine/src/core/render_widget_host_view_qt_delegate.h:52:7: note: forward declaration of ‘class QSGImageNode’
       class QSGImageNode;
             ^
      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:546:26: error: invalid use of incomplete type ‘class QSGImageNode’
                       imageNode->update();
                                ^
      In file included from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.h:55:0,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:49:
      /home/qt/work/qt/qtwebengine/src/core/render_widget_host_view_qt_delegate.h:52:7: note: forward declaration of ‘class QSGImageNode’
       class QSGImageNode;
             ^
      /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:547:61: error: no matching function for call to ‘QSGNode::appendChildNode(QSGImageNode*&)’
                       currentLayerChain->appendChildNode(imageNode);
                                                                   ^
      In file included from /home/qt/work/install/include/QtQuick/QSGNode:1:0,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.h:49,
                       from /home/qt/work/qt/qtwebengine/src/core/delegated_frame_node.cpp:49:
      /home/qt/work/install/include/QtQuick/qsgnode.h:138:10: note: candidate: void QSGNode::appendChildNode(QSGNode*)
           void appendChildNode(QSGNode *node);
                ^
      /home/qt/work/install/include/QtQuick/qsgnode.h:138:10: note:   no known conversion for argument 1 from ‘QSGImageNode*’ to ‘QSGNode*’
      ninja: build stopped: subcommand failed.
      make[3]: *** [invoke_ninja] Error 1
      make[3]: Leaving directory `/home/qt/work/qt/qtwebengine/src/core'
      make[2]: *** [sub-gyp_run-pro-make_first] Error 2
      make[2]: Leaving directory `/home/qt/work/qt/qtwebengine/src/core'
      make[1]: *** [sub-core-make_first] Error 2
      make[1]: Leaving directory `/home/qt/work/qt/qtwebengine/src'
      make: *** [sub-src-make_first] Error 2
      

      The whole build log also attached, which contains the configure script and the env variables. Note, build succeeded with dev (refs 77), but not with refs 79.

        1. webengine_build_fail_dev.txt
          1.29 MB
          Milla Pohjanheimo
        For Gerrit Dashboard: QTBUG-54312
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes