src/core/render_widget_host_view_qt_delegate.h
@@ -49,13 +49,20 @@ QT_BEGIN_NAMESPACE
 class QCursor;
 class QEvent;
 class QPainter;
-class QSGImageNode;
 class QSGLayer;
 class QSGNode;
 class QSGTexture;
 class QVariant;
 class QWindow;
 class QInputMethodEvent;
+
+#if (QT_VERSION < QT_VERSION_CHECK(5, 8, 0))
+class QSGImageNode;
+typedef QSGImageNode QSGInternalImageNode;
+#else
+class QSGInternalImageNode;
+#endif
+
 QT_END_NAMESPACE
 
 namespace QtWebEngineCore {
@@ -92,7 +99,7 @@ public:
     virtual QWindow* window() const = 0;
     virtual QSGTexture *createTextureFromImage(const QImage &) = 0;
     virtual QSGLayer *createLayer() = 0;
-    virtual QSGImageNode *createImageNode() = 0;
+    virtual QSGInternalImageNode *createImageNode() = 0;
     virtual void update() = 0;
     virtual void updateCursor(const QCursor &) = 0;
     virtual void resize(int width, int height) = 0;
