src/webengine/render_widget_host_view_qt_delegate_quick.h
@@ -66,7 +66,7 @@ public:
     virtual QWindow* window() const Q_DECL_OVERRIDE;
     virtual QSGTexture *createTextureFromImage(const QImage &) Q_DECL_OVERRIDE;
     virtual QSGLayer *createLayer() Q_DECL_OVERRIDE;
-    virtual QSGImageNode *createImageNode() Q_DECL_OVERRIDE;
+    virtual QSGInternalImageNode *createImageNode() Q_DECL_OVERRIDE;
     virtual void update() Q_DECL_OVERRIDE;
     virtual void updateCursor(const QCursor &) Q_DECL_OVERRIDE;
     virtual void resize(int width, int height) Q_DECL_OVERRIDE;
